--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,6 @@
-semi: false
-singleQuote: true
-printWidth: 80
-tabWidth: 2
+{
+  "semi": false,
+  "singleQuote": true,
+  "printWidth": 80,
+  "tabWidth": 2
+}
