--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,7 @@
   "semi": false,
   "singleQuote": true,
   "printWidth": 80,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "bracketSpacing": true,
+  "trailingComma": "all"
 }
