--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": false
   },
-  "editor.formatOnSave": true
+  "editor.formatOnSave": false
 }
