--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "vue-loader": "^16.0.0-beta.4",
     "vue-router": "^4.0.0-beta.4",
     "vuepress": "1.2.0",
-    "webpack": "^5.0.0-beta.29",
+    "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.1.0",
