--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.3",
-    "@popperjs/core": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "@vue/compiler-sfc": "3.0.0-rc.10",
@@ -26,7 +25,6 @@
     "cp-cli": "^2.0.0",
     "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
-    "deepmerge": "^3.1.0",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-loader": "^4.0.2",
@@ -85,7 +83,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "regenerator-runtime": "^0.13.3"
+    "regenerator-runtime": "^0.13.3",
+    "@popperjs/core": "^2.4.4",
+    "deepmerge": "^3.1.0"
   },
   "peerDependencies": {
     "vue": "^3.0.0-rc.10"
