chroe: Vue version from rc to one Piece

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,5 @@
     },
     "typeRoots": ["./types"]
   },
-  "include": ["./packages/**/*", "./src/**/*", "./types/*"],
-  "exclude": ["node_modules", "config"]
+  "exclude": ["node_modules"]
 }
