--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v-easy-components",
   "description": "Vue.js UI Components",
-  "version": "2.0.0-beta.2",
+  "version": "2.0.0-beta.3",
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
@@ -10,7 +10,7 @@
     "@babel/preset-env": "^7.6.3",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
-    "@vue/compiler-sfc": "3.0.0-rc.10",
+    "@vue/compiler-sfc": "3.0.0",
     "@vuepress/plugin-back-to-top": "^1.2.0",
     "@vuepress/plugin-google-analytics": "^1.2.0",
     "@vuepress/plugin-pwa": "^1.2.0",
@@ -70,7 +70,7 @@
     "typescript": "^4.0.2",
     "url-loader": "^4.1.0",
     "validate-commit-msg": "^2.14.0",
-    "vue": "^3.0.0-rc.10",
+    "vue": "3.0.0",
     "vue-i18n": "^9.0.0-alpha.16",
     "vue-loader": "^16.0.0-beta.4",
     "vue-router": "^4.0.0-beta.4",
@@ -82,10 +82,10 @@
     "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "regenerator-runtime": "^0.13.3",
     "@popperjs/core": "^2.4.4",
-    "deepmerge": "^3.1.0"
+    "core-js": "^3.6.5",
+    "deepmerge": "^3.1.0",
+    "regenerator-runtime": "^0.13.3"
   },
   "peerDependencies": {
     "vue": "^3.0.0-rc.10"
