feat(AutoComplete): Add auto-complete component to support remote search

--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
     "vue/singleline-html-element-content-newline": "off",
     "vue/no-v-model-argument": "off",
     "vue/no-v-html": "off",
-    "prettier/prettier": "off"
+    "prettier/prettier": "off",
+    "valid-template-root": "off"
   }
 }
