--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "karma-webpack": "^4.0.2",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "lodash": "^4.17.20",
     "mocha": "^6.2.2",
     "node-notifier": "^7.0.2",
     "node-sass": "^4.12.0",
@@ -74,7 +75,7 @@
     "vue-i18n": "^9.0.0-alpha.16",
     "vue-loader": "^16.0.0-beta.4",
     "vue-router": "^4.0.0-beta.4",
-    "vuepress": "1.2.0",
+    "vuepress": "^1.7.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
