--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v-easy-components",
   "description": "Vue3 UI Components",
-  "version": "2.0.0-beta.12",
+  "version": "2.0.0-beta.13",
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
@@ -85,7 +85,8 @@
     "@popperjs/core": "^2.4.4",
     "core-js": "^3.6.5",
     "deepmerge": "^3.1.0",
-    "regenerator-runtime": "^0.13.3"
+    "regenerator-runtime": "^0.13.3",
+    "vue": "3.0.2"
   },
   "peerDependencies": {
     "vue": "^3.0.2"
